--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chokidar": "^1.7.0",
     "request": "^2.81.0",
     "rimraf": "^2.6.1",
+	"unzip-stream": "^0.3.0",
     "unzip": "^0.1.11",
     "zip-folder": "^1.0.0"
   }
